[tool.poetry]
name = "youtube-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[project]
name = "youtube-utils"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.4"
diskcache = "^5.6.3"
pymediainfo = "^6.1.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
