[tool.poetry]
name = "youtube-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[project]
name = "youtube-utils"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.4"
diskcache = "^5.6.3"
pymediainfo = "^6.1.0"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    ".cache",
    ".mypy_cache",
    "venv",
    "media",
    "**/migrations",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C4", "PERF", "ANN", "PLC"]
ignore = ["C408", "ANN101", "ANN102", "F541"]

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)"
]
